Add router with get nickname influencer
